--- a/app/views/pages/base.html.twig
+++ b/app/views/pages/base.html.twig
@@ -23,6 +23,7 @@
     {% block stylesheets %}{% endblock %}
 </head>
 <body>
+{{ comment_message }}
 
 {% block navigation %}
     <nav class="navbar navbar-expand-md navbar-dark">
