--- a/app/views/pages/chapter.html.twig
+++ b/app/views/pages/chapter.html.twig
@@ -1,6 +1,7 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
+
     <section id="showcase" style="min-height: 450px;" class="d-flex justify-content-center align-items-center">
         <div id="overlay"></div>
         <div id="header" class="container text-white text-center">
@@ -22,6 +23,7 @@
             </blockquote>
         </div>
     </section>
+
     <section>
         <div class="container">
 
@@ -93,7 +95,9 @@
 
                             <div class="form-group">
                                 <label for="comment_content">Votre commentaire</label>
-                                <textarea class="form-control {{ (comment_content_err is not empty) ? 'is-invalid' : '' }}" rows="3" name="comment_content">{{ comment_content }}</textarea>
+                                <textarea
+                                        class="form-control {{ (comment_content_err is not empty) ? 'is-invalid' : '' }}"
+                                        rows="3" name="comment_content">{{ comment_content }}</textarea>
                                 <span class="invalid-feedback d-block text-center">{{ comment_content_err }}</span>
                             </div>
                             <button name="create_comment" type="submit" class="btn btn-primary">Submit</button>
@@ -106,18 +110,22 @@
 
                     <!-- Comment -->
                     {% for comment in commentsById %}
-                    <div class="media py-2">
-                        <a class="pull-left" href="#">
-                            <img class="media-object" src="https://picsum.photos/id/{{ comment.comment_id }}/64/64" alt="">
-                        </a>
-                        <div class="media-body py-1 px-1">
-                            <h4 class="media-heading">{{ comment.comment_author }}
-                                <small>le {{ comment.comment_date|date("d/m/Y", false) }} à {{ comment.comment_date|date("H:i:s", false)}}</small>
-                            </h4>
-                            {{ comment.comment_content }}
+                        <div class="media py-2">
+                            <a class="pull-left" href="#">
+                                <img class="media-object" src="https://picsum.photos/id/{{ comment.comment_id }}/64/64"
+                                     alt="">
+                            </a>
+                            <div class="media-body py-1 px-1">
+                                <h4 class="media-heading">{{ comment.comment_author }}
+                                    <small>le {{ comment.comment_date|date("d/m/Y", false) }}
+                                        à {{ comment.comment_date|date("H:i:s", false) }}</small>
+                                </h4>
+                                {{ comment.comment_content }}
+                            </div>
+                            <button class="btn btn-warning" onclick="return confirm('Confirmer la signalisation ?');">
+                                Signaler
+                            </button>
                         </div>
-                        <button class="btn btn-warning" onclick="return confirm('Confirmer la signalisation ?');">Signaler</button>
-                    </div>
 
                     {% endfor %}
                 </div>
