--- a/app/views/pages/admin.base.html.twig
+++ b/app/views/pages/admin.base.html.twig
@@ -55,7 +55,7 @@
 
 {% block body %}
     <section class="container-fluid">
-        <div class="mt-5 pt-5 py-5 px-2">
+        <div class="mt-5 pt-5 px-2">
             <div class="row">
                 <div class="col-md-4 d-none d-lg-block">
                     <div class="list-group">
