--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2430,7 +2430,7 @@ body { font-family: "Raleway", sans-serif; }
 
 .mt-10 { margin-top: 5rem; }
 
-#msg-flash { margin-bottom: -5rem !important; }
+#msg-flash { z-index: 99; }
 
 .navbar { font-weight: 100; position: absolute; top: 0; right: 0; left: 0; z-index: 3; }
 .navbar .navbar-brand h3 { font-weight: 100; }
