--- a/app/views/pages/admin.comments.html.twig
+++ b/app/views/pages/admin.comments.html.twig
@@ -61,10 +61,10 @@
                  <td>{{ comment.comment_date }}</td>
                  <td>
                      <div class="btn-group btn-group-sm float-right" role="group" aria-label="...">
-                         <a href="index.php?action=editComment&id={{ comment.comment_id }}" class="btn btn-success">
-                             <i class="far fa-thumbs-up"></i>O</a>
-                         <a href="index.php?action=editComment&id={{ comment.comment_id }}" class="btn btn-warning">
-                             <i class="far fa-thumbs-down"></i>N</a>
+                         <a href="index.php?action=approuve&id={{ comment.comment_id }}" class="btn btn-success">
+                             <i class="far fa-thumbs-up"></i>Oui</a>
+                         <a href="index.php?action=unapprouve&id={{ comment.comment_id }}" class="btn btn-warning">
+                             <i class="far fa-thumbs-down"></i>Non</a>
                          <a href="index.php?action=deleteComment&id={{ comment.comment_id }}" class="btn btn-danger"
                             onclick="return confirm('Confirmer la suppression ?');">
                              <i class="fa fa-trash"></i>Effacer</a>
