--- a/app/views/pages/contact.html.twig
+++ b/app/views/pages/contact.html.twig
@@ -4,32 +4,32 @@
     <section id="showcase" class="d-flex justify-content-center align-items-center" style="min-height: 450px;">
         <div id="overlay"></div>
         <div id="header" class="container text-white text-center">
-            <h3 class="display-5 mb-0">ME CONTACTER</h3>
+{#            <h3 class="display-5 mb-0">ME CONTACTER</h3>#}
             <h1 class="display-3">Ecrivez-moi deux mots...</h1>
-            <p class="lead d-none d-md-block">Votre retour est tre important pour moi.</p>
+            <p class="lead d-none d-md-block">Votre retour est très important pour moi.</p>
         </div>
     </section>
     <section class="p-5">
         <div class="container text-white text-center py-5">
-            <form method="post">
+            <form action="index.php?action=contact" name="sendMail" method="post">
                 <div class="input-group justify-content-center">
                     <div class="col-md-5">
                         <div class="form-group">
-                            <input type="text" name="txtName" class="form-control" placeholder="Votre nom *" required
+                            <input type="text" name="txtName" class="form-control" placeholder="Nom *" required
                                    value=""/>
                         </div>
                         <div class="form-group">
-                            <input type="text" name="txtEmail" class="form-control" placeholder="Votre Email *" required
+                            <input type="text" name="txtEmail" class="form-control" placeholder="Email *" required
                                    value=""/>
                         </div>
                         <div class="form-group">
-                            <input type="text" name="txtPhone" class="form-control" placeholder="Your Phone Number *"
+                            <input type="text" name="txtPhone" class="form-control" placeholder="Mobile *"
                                    value=""/>
                         </div>
                     </div>
                     <div class="col-md-5">
                         <div class="form-group">
-                            <textarea name="txtMsg" class="form-control" placeholder="Your Message *"
+                            <textarea name="txtMsg" class="form-control" placeholder="Message *"
                                       style="width: 100%; height: 150px;"></textarea>
                         </div>
                     </div>
