--- a/app/views/pages/chapter.html.twig
+++ b/app/views/pages/chapter.html.twig
@@ -67,7 +67,7 @@
                     <!-- Comments Form -->
                     <div class="well">
                         {{ dump() }}
-                        <h4>Laissez nou un commentaire:</h4>
+                        <h4>Laissez-nous un commentaire:</h4>
                         <form action="index.php?action=showChapter&id={{ chapter.id }}" method="POST">
 
                             <div class="form-group row">
@@ -109,7 +109,8 @@
                     <!-- Posted Comments -->
 
                     <!-- Comment -->
-                    {% for comment in commentsById %}
+
+                    {% for comment in commentsById if comment.comment_status == 'approuved' %}
                         <div class="media py-2">
                             <a class="pull-left" href="#">
                                 <img class="media-object" src="https://picsum.photos/id/{{ comment.comment_id }}/64/64"
@@ -122,9 +123,9 @@
                                 </h4>
                                 {{ comment.comment_content }}
                             </div>
-                            <button class="btn btn-warning" onclick="return confirm('Confirmer la signalisation ?');">
+                            <a href="index.php?action=unapprouve&comment_id={{ comment.comment_id }}&id={{ comment.chapterId }}" class="btn btn-warning" onclick="return confirm('Confirmer la signalisation ?');">
                                 Signaler
-                            </button>
+                            </a>
                         </div>
 
                     {% endfor %}
