--- a/app/views/pages/chapter.html.twig
+++ b/app/views/pages/chapter.html.twig
@@ -149,34 +149,56 @@
                     </div>
 
                     <!-- Blog Categories Well -->
-                    <div class="well">
-                        <h4>Blog Categories</h4>
+                    <div class="well mt-5 py-2">
+                        <h4>Blog Chapitres</h4>
                         <div class="row">
-                            <div class="col-lg-6">
+                            <div class="col-lg-12">
                                 <ul class="list-unstyled">
-                                    <li><a href="#">Category Name</a>
-                                    </li>
-                                    <li><a href="#">Category Name</a>
-                                    </li>
-                                    <li><a href="#">Category Name</a>
-                                    </li>
-                                    <li><a href="#">Category Name</a>
-                                    </li>
+                                    {% for chapter in chapters %}
+                                        <li><a href="#">{{ chapter.title|raw }}</a>
+                                        </li>
+                                    {% endfor %}
                                 </ul>
+
                             </div>
-                            <div class="col-lg-6">
-                                <ul class="list-unstyled">
-                                    <li><a href="#">Category Name</a>
-                                    </li>
-                                    <li><a href="#">Category Name</a>
-                                    </li>
-                                    <li><a href="#">Category Name</a>
-                                    </li>
-                                    <li><a href="#">Category Name</a>
-                                    </li>
-                                </ul>
+                            <div class="socialCustom">
+                                <div class="wrapper">
+                                    <ul>
+                                        <li class="facebook">
+                                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                                            <div class="slider">
+                                                <p>facebook</p>
+                                            </div>
+                                        </li>
+                                        <li class="twitter">
+                                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                                            <div class="slider">
+                                                <p>twitter</p>
+                                            </div>
+                                        </li>
+                                        <li class="instagram">
+                                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                                            <div class="slider">
+                                                <p>instagram</p>
+                                            </div>
+                                        </li>
+                                        <li class="google">
+                                            <i class="fa fa-google" aria-hidden="true"></i>
+                                            <div class="slider">
+                                                <p>google</p>
+                                            </div>
+                                        </li>
+                                        <li class="whatsapp">
+                                            <i class="fa fa-whatsapp" aria-hidden="true"></i>
+                                            <div class="slider">
+                                                <p>whatsapp</p>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
+
                         <!-- /.row -->
                     </div>
 
