--- a/app/views/pages/chapters.html.twig
+++ b/app/views/pages/chapters.html.twig
@@ -8,46 +8,34 @@
             <h1 class="display-3">Jean Forteroche</h1>
         </div>
     </section>
-    <section>
-        <div class="container text-center mt-4">
-            <i class="fas fa-quote-left fa-2x text-primary mb-3"></i>
-            <blockquote class="blockquote">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam asperiores, consequuntur
-                    debitis eaque eos error explicabo ipsum quae sit. Lorem ipsum dolor sit amet, consectetur
-                    adipisicing elit. Aliquam atque corporis culpa debitis earum eos esse facere, harum id in optio
-                    quasi qui quo saepe sequi. Animi dignissimos repellat tempore.
-                </p>
-                <footer class="blockquote-footer">Mark Twain</footer>
-            </blockquote>
-        </div>
-    </section>
-    <section>
+    <section class="my-4">
         <div class="container">
 
             <div class="row mb-3">
 
                 <!-- Blog Entries Column -->
                 <div class="col-md-8">
-                    {{ dump(chapters) }}
+                    {#                    {{ dump(chapters) }}#}
                     <!-- First Blog Post -->
                     {% for chapter in chapters %}
                         <div class="card card-body mb-3">
 
-                            <h4><a href="#">{{ chapter.title |raw }}</a></h4>
-                            <div class="bg-light p-2 mb-3">ecrit par JF le {{ chapter.content_date|date("m/d/Y") }}</div>
+                            <h4><a href="index.php?action=showChapter&id={{ chapter.id }}">{{ chapter.title |raw }}</a>
+                            </h4>
+                            <div class="bg-light p-2 mb-3">publie le {{ chapter.content_date|date("d/m/Y") }} par <span>Jean Forteroche</span>
+                            </div>
+
+                            <img class="img-fluid" src="https://picsum.photos/id/{{ chapter.id + photoId }}/730/250"
+                                 alt="">
+
+                            <p class="card-text">
+                                {{ chapter.content |slice(0,500)|raw }}...
+                            </p>
+
+                            <a class="btn btn-sm btn-primary" href="index.php?action=showChapter&id={{ chapter.id }}"><i
+                                        class="fas fa-angle-double-down"></i> Voir plus
+                            </a>
                         </div>
-
-{#                        <img class="img-fluid" src="http://placehold.it/730x250" alt="">#}
-                        <img class="img-fluid" src="https://picsum.photos/id/{{ chapter.id + photoId }}/730/250" alt="">
-
-                        <p class="card-text">
-                            {{ chapter.content |raw }}
-                        </p>
-
-                        <a class="btn btn-primary" href="index.php?action=showChapter&id={{ chapter.id }}">Voir plus
-                            <span class="glyphicon glyphicon-chevron-right"></span></a>
-                        <hr>
                     {% endfor %}
 
 
@@ -83,93 +71,68 @@
                     <div class="well mt-5 py-2">
                         <h4>Blog Chapitres</h4>
                         <div class="row">
-                            <div class="col-lg-6">
+                            <div class="col-lg-12">
                                 <ul class="list-unstyled">
-                                    <li><a href="#">Chapitre Name</a>
-                                    </li>
-                                    <li><a href="#">Chapitre Name</a>
-                                    </li>
-                                    <li><a href="#">Chapitre Name</a>
-                                    </li>
-                                    <li><a href="#">Chapitre Name</a>
-                                    </li>
+                                    {% for chapter in chapters %}
+                                        <li><a href="#">{{ chapter.title|raw }}</a>
+                                        </li>
+                                    {% endfor %}
                                 </ul>
+
                             </div>
-                            <!-- /.col-lg-6 -->
-                            <div class="col-lg-6">
-                                <ul class="list-unstyled">
-                                    <li><a href="#">Chapitre Name</a>
-                                    </li>
-                                    <li><a href="#">Chapitre Name</a>
-                                    </li>
-                                    <li><a href="#">Chapitre Name</a>
-                                    </li>
-                                    <li><a href="#">Chapitre Name</a>
-                                    </li>
-                                </ul>
+                            <div class="socialCustom">
+                                <div class="wrapper">
+                                    <ul>
+                                        <li class="facebook">
+                                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                                            <div class="slider">
+                                                <p>facebook</p>
+                                            </div>
+                                        </li>
+                                        <li class="twitter">
+                                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                                            <div class="slider">
+                                                <p>twitter</p>
+                                            </div>
+                                        </li>
+                                        <li class="instagram">
+                                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                                            <div class="slider">
+                                                <p>instagram</p>
+                                            </div>
+                                        </li>
+                                        <li class="google">
+                                            <i class="fa fa-google" aria-hidden="true"></i>
+                                            <div class="slider">
+                                                <p>google</p>
+                                            </div>
+                                        </li>
+                                        <li class="whatsapp">
+                                            <i class="fa fa-whatsapp" aria-hidden="true"></i>
+                                            <div class="slider">
+                                                <p>whatsapp</p>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
-                            <!-- /.col-lg-6 -->
                         </div>
+
                         <!-- /.row -->
                     </div>
 
-                    <!-- Side Widget Well -->
-                    <div class="well">
-                        <h4>Side Widget Well</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci
-                            accusamus laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
-                    </div>
 
-                </div>
-
-            </div>
-            <!-- /.row -->
-
-            <hr>
-        </div>
-    </section>
-
-    <section>
-        <div class="container mt-5">
-            <div class="row">
-                <div class="col-lg-7 mb-3">
-                    <div id="mainCarousel" class="carousel slide" data-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="images/slider/coffee.png" alt="" class="d-block w-100">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="images/slider/fire.png" alt="" class="d-block w-100">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="images/slider/caribou.png" alt="" class="d-block w-100">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="images/slider/trees.png" alt="" class="d-block w-100">
-                            </div>
-                        </div>
-                        <a href="#mainCarousel" class="carousel-control-prev" data-slide="prev" role="button">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Precedent</span>
-                        </a>
-                        <a href="#mainCarousel" class="carousel-control-next" data-slide="next" role="button">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Suivant</span>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-5">
-                    <h3>NOS LIVRES BESTSELLERS</h3>
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda aut cupiditate
-                        facere ipsa odit quae ratione! Aliquam dolor facilis in molestias neque non ullam veniam
-                        veritatis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, assumenda aut
-                        cum doloribus est, fugit id ipsam minus nostrum, quas quis reprehenderit temporibus veniam.
-                        Explicabo itaque molestias porro quae voluptas.</p>
-                    <a href="">Essayer la vous meme <i class="fa fa-arrow-right"></i></a>
                 </div>
             </div>
+
+
         </div>
+        <!-- /.row -->
+
+        <hr>
+
     </section>
+
 
     <section>
         <div class="container text-center mt-5">
