page accueil ok

--- a/app/views/pages/admin.base.html.twig
+++ b/app/views/pages/admin.base.html.twig
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
     {% block head %}
         <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
@@ -18,10 +18,7 @@
         <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css"/>
         <script src="https://cloud.tinymce.com/5/tinymce.min.js?apiKey=7o0gj8jzupds8lk9jcvo0lbz3z84azgblrsk8b744bt1nxjt"></script>
-
-    {% block title %}
-            <title>Admin JF</title>
-        {% endblock %}
+        <title>Admin JF</title>
     {% endblock %}
     {% block stylesheets %}{% endblock %}
 </head>
@@ -29,8 +26,8 @@
 
 {% block navigation %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
-        <a href="index.php?action=adminView" class="navbar-brand">
-            <h3 class="mb-y">JF - Admin</h3>
+        <a href="index.php?action=home" class="navbar-brand">
+            <h3 class="mb-y">JF - Accueil</h3>
         </a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#mainNavbar">
             <span class="navbar-toggler-icon"></span>
