--- a/app/views/pages/base.html.twig
+++ b/app/views/pages/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
     {% block head %}
         <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
@@ -17,9 +17,7 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,500,700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css"/>
-        {% block title %}
-            <title>Jean Forteroche Blog</title>
-        {% endblock %}
+        <title>Jean Forteroche Blog</title>
     {% endblock %}
     {% block stylesheets %}{% endblock %}
 </head>
@@ -79,9 +77,9 @@
                 <a href="index.php?action=contact" class="nav-link">CONTACT</a>
             </li>
         </ul>
-        <ul class="nav text-center justify-content-center">
+        <ul class="nav text-center justify-content-center py-2">
             <li class="text-primary">
-                <a href="https://www.tolan.me">©2019 BenjiCodeur</a>
+                <a href="https://www.tolan.me"><h6>©2019 BenjiCodeur</h6></a>
             </li>
         </ul>
     </div>
