--- a/app/views/pages/chapters.html.twig
+++ b/app/views/pages/chapters.html.twig
@@ -1,7 +1,7 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-    <section id="showcase" style="min-height: 450px;" class="d-flex justify-content-center align-items-center">
+    <section id="showcase" style="min-height: 750px;" class="d-flex justify-content-center align-items-center">
         <div id="overlay"></div>
         <div id="header" class="container text-white text-center">
             <h3 class="display-5 mb-0">Publications</h3>
@@ -28,7 +28,7 @@
                             <img class="img-fluid" src="https://picsum.photos/id/{{ chapter.id + photoId }}/730/250"
                                  alt="">
 
-                            <p class="card-text">
+                            <p class="card-text py-2">
                                 {{ chapter.content |slice(0,500)|raw }}...
                             </p>
 
@@ -80,7 +80,7 @@
                                 </ul>
 
                             </div>
-                            <div class="socialCustom">
+                            <div class="socialCustom col-md-0">
                                 <div class="wrapper">
                                     <ul>
                                         <li class="facebook">
@@ -135,33 +135,33 @@
 
 
     <section>
-        <div class="container text-center mt-5">
+        <div class="container text-center my-5">
             <h3>LES AUTRES OUVRAGES</h3>
             <h5 class="text-primary">#JEANFORTEROCHE</h5>
             <div class="row mt-4">
                 <div class="col-6 col-lg-3 mb-4">
-                    <img class="img-fluid" src="/images/gallery/social1.png" alt="">
+                    <img class="img-fluid" src="/images/gallery/social1.png" alt="social1">
                 </div>
                 <div class="col-6 col-lg-3 mb-4">
-                    <img class="img-fluid" src="/images/gallery/social2.png" alt="">
+                    <img class="img-fluid" src="/images/gallery/social2.png" alt="social2">
                 </div>
                 <div class="col-6 col-lg-3 mb-4">
-                    <img class="img-fluid" src="/images/gallery/social3.png" alt="">
+                    <img class="img-fluid" src="/images/gallery/social3.png" alt="social3">
                 </div>
                 <div class="col-6 col-lg-3 mb-4">
-                    <img class="img-fluid" src="/images/gallery/social4.png" alt="">
+                    <img class="img-fluid" src="/images/gallery/social4.png" alt="social4">
                 </div>
                 <div class="col-6 col-lg-3 mb-4">
-                    <img class="img-fluid" src="/images/gallery/social5.png" alt="">
+                    <img class="img-fluid" src="/images/gallery/social5.png" alt="social5">
                 </div>
                 <div class="col-6 col-lg-3 mb-4">
-                    <img class="img-fluid" src="/images/gallery/social6.png" alt="">
+                    <img class="img-fluid" src="/images/gallery/social6.png" alt="social6">
                 </div>
                 <div class="col-6 col-lg-3 mb-4">
-                    <img class="img-fluid" src="/images/gallery/social7.png" alt="">
+                    <img class="img-fluid" src="/images/gallery/social7.png" alt="social7">
                 </div>
                 <div class="col-6 col-lg-3 mb-4">
-                    <img class="img-fluid" src="/images/gallery/social8.png" alt="">
+                    <img class="img-fluid" src="/images/gallery/social8.png" alt="social8">
                 </div>
             </div>
         </div>
