--- a/app/views/pages/home.html.twig
+++ b/app/views/pages/home.html.twig
@@ -10,94 +10,92 @@
     <section id="showcase" class="d-flex justify-content-center align-items-center">
         <div id="overlay"></div>
         <div id="header" class="container text-white text-center">
-            <h3 class="display-5 mb-0">DÉCOUVREZ SON NOUVEAU ROMAN</h3>
-            <h1 class="display-3">"Billet simple pour l'Alaska"</h1>
-            <p class="lead d-none d-md-block">"Chaque secret de l'âme d'un écrivain, chaque expérience de sa vie, chaque
-                qualité de son esprit est écrit en grand dans ses œuvres."</p>
-            <a id="chapters" href="index.php?action=chapters" class="btn btn-lg btn-primary px-5">LIRE LES CHAPITRES</a>
+            <h3 class="display-5 mb-5">DÉCOUVREZ SON NOUVEAU ROMAN</h3>
+            <h1 class="display-3 py-5">"Billet simple pour l'Alaska"</h1>
+{#            <p class="lead d-none d-md-block">"Chaque secret de l'âme d'un écrivain, chaque expérience de sa vie, chaque#}
+{#                qualité de son esprit est écrit en grand dans ses œuvres."</p>#}
+{#            <a id="chapters" href="index.php?action=chapters" class="btn btn-lg btn-primary px-5">LIRE LES CHAPITRES</a>#}
         </div>
     </section>
-    <section>
+    <section class="py-5">
         <div class="container text-center mt-5">
-            <h2>LES PLUS APPRECIE</h2>
+            <h2>LES DERNIERS CHAPITRES</h2>
             <div class="row">
                 {% for chapter in chapters|slice(0,3) %}
-                <div class="col-md-4 p-3">
-                    <img src="images/icons/nature.png" alt="" class="img-fluid">
-                    <h3>{{ chapter.title }}</h3>
-                    <p class="lead d-none d-sm-inline">{{ chapter.content|slice(0,500)|raw }}...</p>
-                </div>
+                    <div class="col-md-4 p-3">
+                        <img src="images/icons/nature.png" alt="" class="img-fluid">
+                        <h3><a href="index.php?action=showChapter&id={{ chapter.id }}">{{ chapter.title|raw }}</a></h3>
+                        <p class="lead d-none d-sm-inline"> {{ chapter.content|slice(0,500)|raw }}... </p>
+                    </div>
                 {% endfor %}
 
             </div>
         </div>
     </section>
 
-    <section>
-        <div class="container text-center mt-2 p-3">
-            <h3>CHOISIR VOTRE THEME</h3>
-            <div class="row m-2">
-                <div class="col-md-6 p-3">
-                    <div class="card">
-                        <img src="images/winter.png" alt="" class="card-img-top">
-                        <div class="card-body">
-                            <h2 class="card-title text-primary">Romains fantastique</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet
-                                architecto, aspernatur aut culpa dignissimos doloremque dolores doloribus eius et hic
-                                ipsam iste itaque nobis non quam reiciendis rem sunt temporibus.</p>
-                            <a href="" class="btn btn-lg btn-outline-primary">Commencer</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 p-3">
-                    <div class="card">
-                        <img src="images/dogs.png" alt="" class="card-img-top">
-                        <div class="card-body">
-                            <h2 class="card-title text-primary">Romains d'aventure</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet
-                                architecto, aspernatur aut culpa dignissimos doloremque dolores doloribus eius et hic
-                                ipsam iste itaque nobis non quam reiciendis rem sunt temporibus.</p>
-                            <a href="" class="btn btn-lg btn-outline-primary">Commencer</a>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="quotes">
+    <section class="py-5" id="quotes">
         <div class="container text-center mt-4">
-            <h3>VOICI les Meilleurs COMMENTQIRES DE NOS LECTEURS</h3>
+            <h3>VOICI LES MEILLEURS COMMENTAIRES DE NOS LECTEURS</h3>
             <div class="row">
                 <div class="col-md-4 my-2">
                     <i class="fas fa-quote-left fa-2x text-primary mb-3"></i>
                     <blockquote class="blockquote">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam asperiores, consequuntur
-                            debitis eaque eos error explicabo ipsum quae sit.
+                            C'est beau la montagne et même quand les éléments sont contraires
+                            Une belle histoire d'humanité dans des décors naturels magnifiques. Le dessin porte le
+                            scénario.
                         </p>
-                        <footer class="blockquote-footer">Mark Twain</footer>
+                        <footer class="blockquote-footer">Guillaume D.
+                            <p>POSTÉ LE 02 SEPT. 2018</p>
+                            <div class="personalStar">
+                                <i class="fas fa-star 3x"></i>
+                                <i class="fas fa-star 3x"></i>
+                                <i class="fas fa-star 3x"></i>
+                                <i class="fas fa-star 3x"></i>
+                                <i class="fas fa-star 3x"></i>
+                            </div>
+                        </footer>
                     </blockquote>
                 </div>
                 <div class="col-md-4 my-2">
                     <i class="fas fa-quote-left fa-2x text-primary mb-3"></i>
                     <blockquote class="blockquote">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam asperiores, consequuntur
-                            debitis eaque eos error explicabo ipsum quae sit.
+                            superbe!!
+                            Superbe roman graphique. On aime son scénario, et son dessin qui nous entraîne dans un
+                            univers à part...
+                            tout en lenteur et en force, on croit entendre les bruits de la montagne...
                         </p>
-                        <footer class="blockquote-footer">Mark Twain</footer>
+                        <footer class="blockquote-footer">Pierre M.
+                            <p>POSTÉ LE 08 JANV. 2017</p>
+                            <div class="personalStar">
+                                <i class="fas fa-star 3x"></i>
+                                <i class="fas fa-star 3x"></i>
+                                <i class="fas fa-star 3x"></i>
+                                <i class="fas fa-star 3x"></i>
+                                <i class="fas fa-star 3x"></i>
+                            </div>
+                        </footer>
                     </blockquote>
                 </div>
                 <div class="col-md-4 my-2">
                     <i class="fas fa-quote-left fa-2x text-primary mb-3"></i>
                     <blockquote class="blockquote">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam asperiores, consequuntur
-                            debitis eaque eos error explicabo ipsum quae sit.
+                            Magnifique conte, édition superbe
+                            Très satisfait de cette édition regroupant les trois tomes de la bd mythique. Très belle
+                            présentation, un cadeau très apprécié.
                         </p>
-                        <footer class="blockquote-footer">Mark Twain</footer>
+                        <footer class="blockquote-footer">Alexandre
+                            <p>POSTÉ LE 16 JUIN 2014</p>
+                            <div class="personalStar">
+                                <i class="fas fa-star 3x"></i>
+                                <i class="fas fa-star 3x"></i>
+                                <i class="fas fa-star 3x"></i>
+                                <i class="fas fa-star 3x"></i>
+                                <i class="fas fa-star 3x"></i>
+                            </div>
+                        </footer>
                     </blockquote>
                 </div>
             </div>
