--- a/app/views/pages/admin.comments.html.twig
+++ b/app/views/pages/admin.comments.html.twig
@@ -65,7 +65,7 @@
                              <i class="far fa-thumbs-up"></i>Oui</a>
                          <a href="index.php?action=unapprouve&id={{ comment.comment_id }}" class="btn btn-warning">
                              <i class="far fa-thumbs-down"></i>Non</a>
-                         <a href="index.php?action=deleteComment&id={{ comment.comment_id }}" class="btn btn-danger"
+                         <a href="index.php?action=deleteComment&comment_id={{ comment.comment_id }}" class="btn btn-danger"
                             onclick="return confirm('Confirmer la suppression ?');">
                              <i class="fa fa-trash"></i>Effacer</a>
                      </div>
