--- a/public/scss/custom.scss
+++ b/public/scss/custom.scss
@@ -19,16 +19,26 @@ body {
   z-index: 99;
 }
 
+.personalStar {
+  color: goldenrod;
+}
+
+ul.flex-column.jf {
+  list-style: none;
+}
+
 .socialCustom {
   .wrapper {
     position: absolute;
     top: 50%;
     left: 45%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
   }
+
   ul {
     list-style: none;
   }
+
   ul li {
     width: 50px;
     height: 50px;
@@ -37,30 +47,37 @@ body {
     border-radius: 3px;
     position: relative;
     cursor: pointer;
-    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   }
+
   ul li .fa {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     font-size: 20px;
   }
+
   ul li.facebook {
     background: #3b5999;
   }
+
   ul li.twitter {
     background: #55acee;
   }
+
   ul li.instagram {
     background: #e4405f;
   }
+
   ul li.google {
     background: #dd4b39;
   }
+
   ul li.whatsapp {
     background: #25d366;
   }
+
   .slider {
     position: absolute;
     top: 0;
@@ -73,6 +90,7 @@ body {
     border-radius: 3px;
     transition: all 0.2s ease;
   }
+
   .slider p {
     text-transform: uppercase;
     font-size: 16px;
@@ -80,29 +98,41 @@ body {
     font-weight: 900;
     transition: all 0.2s ease;
   }
+
   ul li.facebook div.slider {
     background: #624aac;
   }
+
   ul li.twitter div.slider {
     background: #7fd5f6;
   }
+
   ul li.instagram div.slider {
     background: #dd94c6;
   }
+
   ul li.google div.slider {
     background: #eea59c;
   }
+
   ul li.whatsapp div.slider {
     background: #82d47e;
   }
+
   ul li:hover .slider {
     width: 180px;
   }
+
   ul li:hover .slider p {
     opacity: 1;
   }
-}
 
+  @include media-breakpoint-down(sm) {
+    .wrapper {
+      display: none;
+    }
+  }
+}
 
 
 .navbar {
@@ -131,7 +161,7 @@ body {
 
 #showcase {
   background: url("../images/main.jpeg") bottom / cover no-repeat;
-  min-height: 750px;
+  min-height: 900px;
   position: relative;
 
   #header {
