dashboard test b3 to b4

--- a/app/views/pages/home.html.twig
+++ b/app/views/pages/home.html.twig
@@ -35,7 +35,7 @@
 
     <section class="py-5" id="quotes">
         <div class="container text-center mt-4">
-            <h3>VOICI LES MEILLEURS COMMENTAIRES DE NOS LECTEURS</h3>
+            <h3>TEMONIAGES DE NOS LECTEURS</h3>
             <div class="row">
                 <div class="col-md-4 my-2">
                     <i class="fas fa-quote-left fa-2x text-primary mb-3"></i>
