--- a/public/scss/custom.scss
+++ b/public/scss/custom.scss
@@ -3,11 +3,10 @@ body {
   font-family: "Raleway", sans-serif;
 }
 
-//.was-validated .form-control:invalid, .form-control.is-invalid, .was-validated .custom-select:invalid, .custom-select.is-invalid {
-//  .invalid-feedback {
-//    display: block !important;
-//  }
-//}
+.huge {
+  font-size: 50px;
+  line-height: normal;
+}
 
 //flash message
 .mt-10 {
