page acceuil ok et page pub ok

--- a/app/views/pages/chapter.html.twig
+++ b/app/views/pages/chapter.html.twig
@@ -149,20 +149,8 @@
                 <!-- Blog Sidebar Widgets Column -->
                 <div class="col-md-4">
 
-                    <!-- Blog Search Well -->
-                    <div class="well py-2">
-                        <h4>Trouver Chapitre</h4>
-                        <div class="input-group">
-                            <input type="text" class="form-control">
-                            <button class="btn btn-primary" type="button">Trouver
-                            </button>
-
-                        </div>
-                        <!-- /.input-group -->
-                    </div>
-
                     <!-- Blog Categories Well -->
-                    <div class="well mt-5 py-2">
+                    <div class="card mt-5 py-2">
                         <h4>Blog Chapitres</h4>
                         <div class="row">
                             <div class="col-lg-12">
