--- a/app/views/pages/chapters.html.twig
+++ b/app/views/pages/chapters.html.twig
@@ -4,14 +4,14 @@
     <section id="showcase" style="min-height: 750px;" class="d-flex justify-content-center align-items-center">
         <div id="overlay"></div>
         <div id="header" class="container text-white text-center">
-            <h3 class="display-5 mb-0">Publications</h3>
+            <h3 class="display-5 my-5">Publications</h3>
             <h1 class="display-3">Jean Forteroche</h1>
         </div>
     </section>
     <section class="my-4">
         <div class="container">
 
-            <div class="row mb-3">
+            <div class="row my-5">
 
                 <!-- Blog Entries Column -->
                 <div class="col-md-8">
@@ -38,39 +38,15 @@
                         </div>
                     {% endfor %}
 
-
-                    <!-- Pager -->
-
-                    <ul class="pager d-flex">
-                        <li class="previous nav-link">
-                            <a href="#">&larr; Ancien</a>
-                        </li>
-                        <li class="next nav-link">
-                            <a href="#">Nouveau &rarr;</a>
-                        </li>
-                    </ul>
-
                 </div>
 
                 <!-- Blog Sidebar Widgets Column -->
                 <div class="col-md-4">
 
-                    <!-- Blog Search Well -->
-                    <div class="well py-2">
-                        <h4>Trouver Chapitre</h4>
-                        <div class="input-group">
-                            <input type="text" class="form-control">
-                            <button class="btn btn-primary" type="button">Trouver
-                            </button>
-
-                        </div>
-                        <!-- /.input-group -->
-                    </div>
-
-                    <!-- Blog Categories Well -->
-                    <div class="well mt-5 py-2">
-                        <h4>Blog Chapitres</h4>
-                        <div class="row">
+                    <!-- Blog Chapitres Well -->
+                    <div class="card">
+                        <div class="card-body">
+                            <h4>Chapitres</h4>
                             <div class="col-lg-12">
                                 <ul class="list-unstyled">
                                     {% for chapter in chapters %}
@@ -80,45 +56,7 @@
                                 </ul>
 
                             </div>
-                            <div class="socialCustom col-md-0">
-                                <div class="wrapper">
-                                    <ul>
-                                        <li class="facebook">
-                                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                                            <div class="slider">
-                                                <p>facebook</p>
-                                            </div>
-                                        </li>
-                                        <li class="twitter">
-                                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                                            <div class="slider">
-                                                <p>twitter</p>
-                                            </div>
-                                        </li>
-                                        <li class="instagram">
-                                            <i class="fa fa-instagram" aria-hidden="true"></i>
-                                            <div class="slider">
-                                                <p>instagram</p>
-                                            </div>
-                                        </li>
-                                        <li class="google">
-                                            <i class="fa fa-google" aria-hidden="true"></i>
-                                            <div class="slider">
-                                                <p>google</p>
-                                            </div>
-                                        </li>
-                                        <li class="whatsapp">
-                                            <i class="fa fa-whatsapp" aria-hidden="true"></i>
-                                            <div class="slider">
-                                                <p>whatsapp</p>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
                         </div>
-
-                        <!-- /.row -->
                     </div>
 
 
